--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -3,31 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <title>Calander</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="../css/DarklyBootstrap.css">
+    <link rel="stylesheet" href="../css/navbar-styles.css">
+    <link rel="stylesheet" href="../css/calendarStyles.css">
+
 </head>
 <body style="background-color: black">
-
-<!--Start Navbar-->
-<nav class="navbar navbar-default navbar-fixed-top">
-    <ul class="nav nav-pills nav-justified">
-        <li role="presentation"><a href="#">Home</a></li>
-        <li role="presentation"><a href="#">Meetings</a></li>
-        <li role="presentation"><a href="#">Contact</a></li>
-        <li role="presentation"><a href="#">Projects</a></li>
-    </ul>
-</nav>
+<div class="page-background">
 
 
-<div class="hr margin-top-30 margin-bottom-30"></div>
+    <!--------------------------------START NAVBAR------------------------------>
+    <nav class="navbar navbar-custom navbar-fixed-top">
+        <div class="container">
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active-tab"><a href="Main.html">Home</a></li>
+                    <li><a href="calender.html">Calendar</a></li>
+                    <li><a href="#">Previous Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">
+                            Social Media<span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Instagram</a></li>
+                            <li><a href="#">Snapchat</a></li>
+                            <li><a href="#">Twitter</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">Officers<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">President</a></li>
+                            <li><a href="#">Vice President</a></li>
+                            <li><a href="#">Treasurer</a></li>
+                        </ul>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+    <!----------------------------------END NAVBAR-------------------------------------->
+
+
+    <div class="hr margin-top-30 margin-bottom-30"></div>
     <h4>You may sync our Calendar to yours and keep up with all our events and meetings.</h4>
-    <p>Simply <a href="https://calendar.google.com/calendar/ical/acm.calstatela%40gmail.com/public/basic.ics">click</a></p>
-<div class="container">
-<div class="row">
-    <div class="col-xs-10 col-xs-offset-1">
-        <iframe src="https://www.google.com/calendar/embed?src=acm.calstatela%40gmail.com&ctz=America/Los_Angeles" width="100%" height="600" ></iframe>
+    <p>Simply <a href="#">click</a></p>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1">
+                <iframe src="#" width="100%" height="600"></iframe>
+            </div>
+        </div>
     </div>
-</div>
 </div>
 </body>
 </html>
