Added contact/prev project web pages and css files. Made changes to layout of Main.

--- a/pages/Main.html
+++ b/pages/Main.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<div id="wrapper" class="page-background">
+<div id="wrapper">
 
     <div id="page-content-wrapper" >
 
@@ -31,7 +31,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active-tab"><a href="Main.html">Home</a></li>
                         <li><a href="calendar.html">Calendar</a></li>
-                        <li><a href="#">Previous Projects</a></li>
+                        <li><a href=previous-projects.html>Previous Projects</a></li>
                         <li><a href="contact.html">Contact</a></li>
 
                         <li class="dropdown">
@@ -91,8 +91,7 @@
                 <!-- Begin our first row of data -->
                 <div class="row">
 
-                    <!-- Column 1 -->
-                    <div class="col-xs-4 col-xs-offset-4">
+                    <div class="col-xs-8 col-xs-offset-4">
                         <div class="page-header">
                             <h3>
                                 Who Are We?
@@ -105,14 +104,15 @@
                                 disappointment! We hope that you keep us in careful consideration as continue to type
                                 nonsense into this paragraph to fill up the space!
                             </p>
-                            <a class="btn btn-primary center-block">
+                            <a class="btn btn-primary center-block" href="previous-projects.html">
                                 Wanna see our work?
                             </a>
                         </div>
                     </div>
-
-                    <!--Column 2 -->
-                    <div class="col-xs-4">
+                </div>
+            <!-- Begin Second Row-->
+                <div>
+                    <div class="col-xs-7 col-xs-offset-5">
                         <div class="page-header">
                             <h3 style="text-align: right">
                                 Where Can You Find Us?
@@ -137,10 +137,9 @@
                     </div>
                 </div>
 
-                <!-- Begin Second Row-->
+                <!-- Begin Third Row-->
                 <div class="row">
-                    <!--Only Column For now-->
-                    <div class="col-xs-4 col-xs-offset-6">
+                    <div class="col-xs-8 col-xs-offset-4">
                         <div class="page-header">
                             <h3 style="text-align: center">
                                 Why Should You Join Us?
