--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -10,7 +10,7 @@
 
 </head>
 <body style="background-color: black">
-<div class="page-background">
+<div>
 
 
     <!--------------------------------START NAVBAR------------------------------>
@@ -18,9 +18,9 @@
         <div class="container">
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active-tab"><a href="Main.html">Home</a></li>
-                    <li><a href="calender.html">Calendar</a></li>
-                    <li><a href="#">Previous Projects</a></li>
+                    <li><a href="Main.html">Home</a></li>
+                    <li class="active-tab"><a href="calendar.html">Calendar</a></li>
+                    <li><a href="previous-projects.html">Previous Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
 
                     <li class="dropdown">
