--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
     <link rel="stylesheet" href="../css/navbar-styles.css">
+    <link rel="stylesheet" href="../css/contact-styles.css">
 </head>
 <body>
 
@@ -14,24 +15,27 @@
     <div class="container">
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active-tab"><a href="Main.html">Home</a></li>
+                <li><a href="Main.html">Home</a></li>
                 <li><a href="calendar.html">Calendar</a></li>
-                <li><a href="#">Previous Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="previous-projects.html">Previous Projects</a></li>
+                <!--<li class="active-tab"><a href="contact.html">Contact</a></li>-->
 
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        Social Media<span class="caret"></span>
+                <li class="dropdown active-tab">
+                    <a href="contact.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                       aria-haspopup="true" aria-expanded="false">
+                        Contact<span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Facebook</a></li>
                         <li><a href="#">Instagram</a></li>
                         <li><a href="#">Snapchat</a></li>
                         <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Email</a></li>
                     </ul>
-                </li>
+
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Officers<span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">Officers<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">President</a></li>
                         <li><a href="#">Vice President</a></li>
@@ -46,6 +50,32 @@
     <!-- /.container -->
 </nav>
 <!----------------------------------END NAVBAR-------------------------------------->
+
+<div id="page-content-wrapper">
+    <h2>
+        Email:
+        <small>filmproductionsla@gmail.com</small>
+    </h2>
+    <h2 class="title">
+        Social Media
+    </h2>
+    <h3 class="list"><a href="http://facebook.com" target="_blank">Facebook</a></h3>
+    <h3 class="list">
+        <a href="http://instagram.com" target="_blank">Instagram</a>
+        <img src="../Images/insta.png" href="http://instagram.com" target="_blank" class="logo-images">
+    </h3>
+    <h3 class="list"><a href="http://twitter.com" target="_blank">Twitter</a></h3>
+    <h3 class="list">
+        <a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a>
+        <img href="../Images/Snapcode%20Cropped.png" target="_blank" src="../Images/Snapcode%20Cropped.png"
+             class="logo-images">
+    </h3>
+    <h3 class="list">
+        <a href="http://gmail.com" target="_blank">Email</a>
+    </h3>
+
+
+</div>
 
 </body>
 </html>
