Completed Functionality on Contact Page and the NavBar. Added iframe links to previous projects on YouTube

--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Calander</title>
 
+    <link rel="icon" href="../Images/CSULALogo.png">
+
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
     <link rel="stylesheet" href="../css/navbar-styles.css">
     <link rel="stylesheet" href="../css/calendarStyles.css">
@@ -21,20 +23,22 @@
                     <li><a href="Main.html">Home</a></li>
                     <li class="active-tab"><a href="calendar.html">Calendar</a></li>
                     <li><a href="previous-projects.html">Previous Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <!--<li class="active-tab"><a href="contact.html">Contact</a></li>-->
 
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false">
-                            Social Media<span class="caret"></span>
+                        <a href="contact.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                           aria-haspopup="true" aria-expanded="false">
+                            Contact<span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Facebook</a></li>
-                            <li><a href="#">Instagram</a></li>
-                            <li><a href="#">Snapchat</a></li>
-                            <li><a href="#">Twitter</a></li>
+                            <li><a href="https://www.facebook.com/FilmProductionsLA/">Facebook</a></li>
+                            <li><a href="https://www.instagram.com/filmproductionsla/">Instagram</a></li>
+                            <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured">YouTube</a></li>
+                            <li><a href="../Images/Snapcode%20Cropped.png">Snapchat</a></li>
+                            <li><a href="https://twitter.com/csulafp">Twitter</a></li>
+                            <li><a href="contact.html">Email</a></li>
                         </ul>
-                    </li>
+
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">Officers<span class="caret"></span></a>
