--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Contact</title>
 
+    <link rel="icon" href="../Images/CSULALogo.png">
+
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
     <link rel="stylesheet" href="../css/navbar-styles.css">
     <link rel="stylesheet" href="../css/contact-styles.css">
@@ -26,11 +28,12 @@
                         Contact<span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Instagram</a></li>
-                        <li><a href="#">Snapchat</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Email</a></li>
+                        <li><a href="https://www.facebook.com/FilmProductionsLA/">Facebook</a></li>
+                        <li><a href="https://www.instagram.com/filmproductionsla/">Instagram</a></li>
+                        <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured">YouTube</a></li>
+                        <li><a href="../Images/Snapcode%20Cropped.png">Snapchat</a></li>
+                        <li><a href="https://twitter.com/csulafp">Twitter</a></li>
+                        <li><a href="contact.html">Email</a></li>
                     </ul>
 
                 <li class="dropdown">
@@ -59,19 +62,35 @@
     <h2 class="title">
         Social Media
     </h2>
-    <h3 class="list"><a href="http://facebook.com" target="_blank">Facebook</a></h3>
     <h3 class="list">
-        <a href="http://instagram.com" target="_blank">Instagram</a>
-        <img src="../Images/insta.png" href="http://instagram.com" target="_blank" class="logo-images">
+        <a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a>
+        <a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">
+            <img src="../Images/facebookLogo.png" class="logo-images" >
+        </a>
     </h3>
-    <h3 class="list"><a href="http://twitter.com" target="_blank">Twitter</a></h3>
+    <h3 class="list">
+        <a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/filmproductionsla/" target="_blank">
+            <img src="../Images/insta.png" class="logo-images">
+        </a>
+    </h3>
+    <h3 class="list">
+        <a href="https://twitter.com/csulafp" target="_blank">Twitter</a>
+        <a href="https://twitter.com/csulafp" target="_blank">
+            <img src="../Images/Twitter-icon.png" class="logo-images">
+        </a>
+    </h3>
     <h3 class="list">
         <a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a>
-        <img href="../Images/Snapcode%20Cropped.png" target="_blank" src="../Images/Snapcode%20Cropped.png"
-             class="logo-images">
+        <a  href="../Images/Snapcode%20Cropped.png" target="_blank">
+            <img src="../Images/Snapcode%20Cropped.png" class="logo-images">
+        </a>
     </h3>
     <h3 class="list">
         <a href="http://gmail.com" target="_blank">Email</a>
+        <a>
+            <img class="logo-images" src="../Images/GmailICON.ico" >
+        </a>
     </h3>
 
 
