--- a/pages/Main.html
+++ b/pages/Main.html
@@ -31,22 +31,26 @@
                     <ul class="nav navbar-nav">
                         <li class="active-tab"><a href="Main.html">Home</a></li>
                         <li><a href="calendar.html">Calendar</a></li>
-                        <li><a href=previous-projects.html>Previous Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="previous-projects.html">Previous Projects</a></li>
+                        <!--<li class="active-tab"><a href="contact.html">Contact</a></li>-->
 
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                Social Media<span class="caret"></span>
+                            <a href="contact.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                               aria-haspopup="true" aria-expanded="false">
+                                Contact<span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Facebook</a></li>
-                                <li><a href="#">Instagram</a></li>
-                                <li><a href="#">Snapchat</a></li>
-                                <li><a href="#">Twitter</a></li>
+                                <li><a href="https://www.facebook.com/FilmProductionsLA/">Facebook</a></li>
+                                <li><a href="https://www.instagram.com/filmproductionsla/">Instagram</a></li>
+                                <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured">YouTube</a></li>
+                                <li><a href="../Images/Snapcode%20Cropped.png">Snapchat</a></li>
+                                <li><a href="https://twitter.com/csulafp">Twitter</a></li>
+                                <li><a href="contact.html">Email</a></li>
                             </ul>
-                        </li>
+
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Officers<span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                               aria-expanded="false">Officers<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">President</a></li>
                                 <li><a href="#">Vice President</a></li>
