--- a/pages/previous-projects.html
+++ b/pages/previous-projects.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Previous Projects</title>
 
+    <link rel="icon" href="../Images/CSULALogo.png">
+
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
     <link rel="stylesheet" href="../css/navbar-styles.css">
     <link rel="stylesheet" href="../css/prev-proj-styles.css">
@@ -18,21 +20,25 @@
                     <li><a href="Main.html">Home</a></li>
                     <li><a href="calendar.html">Calendar</a></li>
                     <li class="active-tab"><a href="previous-projects.html">Previous Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <!--<li class="active-tab"><a href="contact.html">Contact</a></li>-->
 
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            Social Media<span class="caret"></span>
+                        <a href="contact.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                           aria-haspopup="true" aria-expanded="false">
+                            Contact<span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Facebook</a></li>
-                            <li><a href="#">Instagram</a></li>
-                            <li><a href="#">Snapchat</a></li>
-                            <li><a href="#">Twitter</a></li>
+                            <li><a href="https://www.facebook.com/FilmProductionsLA/">Facebook</a></li>
+                            <li><a href="https://www.instagram.com/filmproductionsla/">Instagram</a></li>
+                            <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured">YouTube</a></li>
+                            <li><a href="../Images/Snapcode%20Cropped.png">Snapchat</a></li>
+                            <li><a href="https://twitter.com/csulafp">Twitter</a></li>
+                            <li><a href="contact.html">Email</a></li>
                         </ul>
-                    </li>
+
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Officers<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">Officers<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">President</a></li>
                             <li><a href="#">Vice President</a></li>
@@ -50,71 +56,78 @@
 
 
     <!---------------------------- START PAGE CONTENT -------------------------------->
+
+
+    <!--------ROW 5------------>
     <div id="container">
         <div class="row video-row" style="margin-top: 5%">
             <div class="col-xs-4">
                 <!-- Video link 1 -->
                 <div class="video-boxes">
-                    <img src="../Images/CSULALogo.png">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/YyItLyjtl6U" frameborder="0" allowfullscreen></iframe>
+                    <!--<img src="../Images/CSULALogo.png">-->
                 </div>
             </div>
             <div class="col-xs-4">
                 <!-- Video link 2 -->
                 <div class="video-boxes">
-                    <img src="../Images/CSULALogo.png">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/7BSaRIanrjk" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-xs-4">
                 <!-- Video link 3 -->
                 <div class="video-boxes">
-                    <img src="../Images/CSULALogo.png">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/lRxhw2cjzuc" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
 
+        <!--------ROW 5------------>
         <div class="row video-row">
             <div class="col-xs-4">
                 <!-- Video link 4 -->
                 <div class="video-boxes">
-                    <img src="../Images/CSULALogo.png">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/1TH0t6Z29HA" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-xs-4">
                 <!-- Video link 5 -->
                 <div class="video-boxes">
-                    <img  src="../Images/CSULALogo.png">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ZUUK8EM76ME" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-xs-4">
                 <!-- Video link 66 -->
                 <div class="video-boxes">
-                    <img src="../Images/CSULALogo.png">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/SeXBVc-bHGs" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
     </div>
 
+    <!--------ROW 4------------>
     <div class="row video-row">
         <div class="col-xs-4">
             <!-- Video link 7 -->
             <div class="video-boxes">
-                <img src="../Images/CSULALogo.png">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/RNuWG6oNfWM" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
         <div class="col-xs-4">
             <!-- Video link 8 -->
             <div class="video-boxes">
-                <img src="../Images/CSULALogo.png">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/5yjapMdDdyY" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
         <div class="col-xs-4">
             <!-- Video link 9 -->
             <div class="video-boxes">
-                <img src="../Images/CSULALogo.png">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zgoyaMvwDMo" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
 
 </div>
+
 </body>
 </html>
