--- a/pages/Main.html
+++ b/pages/Main.html
@@ -49,7 +49,7 @@
                             </ul>
 
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                        <a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                                aria-expanded="false">Officers<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">President</a></li>
@@ -86,6 +86,7 @@
                     </header>
                 </div>
             </div>
+        </div>
             <!---------------------------END HEADER--------------------------->
 
 
@@ -173,8 +174,6 @@
 
             <!----------------------------END PAGE CONTENT------------------------->
             <br/>
-    </div>
-
 
     <footer>
         <div class="well well-sm text-center" style="margin-top: 50px">
@@ -182,6 +181,7 @@
         </div>
     </footer>
 
+</div>
 </div>
 </body>
 </html>
