--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,7 +37,7 @@
                     </ul>
 
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                <a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Officers<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">President</a></li>
@@ -87,13 +87,11 @@
         </a>
     </h3>
     <h3 class="list">
-        <a href="http://gmail.com" target="_blank">Email</a>
-        <a>
+        <a href="mailto:filmproductionsla@gmail.com?Subject=Hello%20FilmProductions" target="_top">Email</a>
+        <a href="mailto:filmproductionsla@gmail.com?Subject=Hello%20FilmProductions" target="_top">
             <img class="logo-images" src="../Images/GmailICON.ico" >
         </a>
     </h3>
-
-
 </div>
 
 </body>
