--- a/pages/previous-projects.html
+++ b/pages/previous-projects.html
@@ -37,7 +37,7 @@
                         </ul>
 
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                    <a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">Officers<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">President</a></li>
