finished officer page. Added Functionlity to differnet dropdown options for Officers. Added Link to ACM Calendar as a demo.

--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -31,21 +31,22 @@
                             Contact<span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="https://www.facebook.com/FilmProductionsLA/">Facebook</a></li>
-                            <li><a href="https://www.instagram.com/filmproductionsla/">Instagram</a></li>
-                            <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured">YouTube</a></li>
-                            <li><a href="../Images/Snapcode%20Cropped.png">Snapchat</a></li>
-                            <li><a href="https://twitter.com/csulafp">Twitter</a></li>
-                            <li><a href="contact.html">Email</a></li>
+                            <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
+                            <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
+                            <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured" target="_blank">YouTube</a></li>
+                            <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
+                            <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
+                            <li><a href="contact.html" target="_blank">Email</a></li>
                         </ul>
 
-                    <li class="dropdown">
-                    <a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                    <li  class="dropdown">
+                        <a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">Officers<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">President</a></li>
-                            <li><a href="#">Vice President</a></li>
-                            <li><a href="#">Treasurer</a></li>
+                            <li><a href="officers.html?id=1">President</a></li>
+                            <li><a href="officers.html?id=2">Vice President</a></li>
+                            <li><a href="officers.html?id=3">Treasurer</a></li>
+                            <li><a href="officers.html?id=4">Public Relations</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -58,13 +59,17 @@
     <!----------------------------------END NAVBAR-------------------------------------->
 
 
-    <div class="hr margin-top-30 margin-bottom-30"></div>
-    <h4>You may sync our Calendar to yours and keep up with all our events and meetings.</h4>
-    <p>Simply <a href="#">click</a></p>
+    <header style="margin-top: 75px; text-align: center">
+        <h2>Calendar</h2>
+    </header>
     <div class="container">
+        <center>
+            <h4>You may sync our Calendar to yours and keep up with all our events and meetings.</h4>
+            <p>Simply <a href="https://calendar.google.com/calendar/ical/acm.calstatela%40gmail.com/public/basic.ics">click</a></p>
+        </center>
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
-                <iframe src="#" width="100%" height="600"></iframe>
+                <iframe class="calendar" src="https://www.google.com/calendar/embed?src=acm.calstatela%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
     </div>
