--- a/pages/previous-projects.html
+++ b/pages/previous-projects.html
@@ -58,77 +58,10 @@
 
     <!---------------------------- START PAGE CONTENT -------------------------------->
 
+    
+    <iframe class = "fame" width="700" height="450" src="" frameborder="0" gesture="media" allowfullscreen></iframe>
+    <h3 class="description"> <b>Here is our most recent videos</b></h3>
 
-    <!--------ROW 5------------>
-    <div id="container">
-        <div class="row video-row" style="margin-top: 5%">
-            <div class="col-xs-4">
-                <!-- Video link 1 -->
-                <div class="video-boxes">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/YyItLyjtl6U" frameborder="0" allowfullscreen></iframe>
-                    <!--<img src="../Images/CSULALogo.png">-->
-                </div>
-            </div>
-            <div class="col-xs-4">
-                <!-- Video link 2 -->
-                <div class="video-boxes">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/7BSaRIanrjk" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
-            <div class="col-xs-4">
-                <!-- Video link 3 -->
-                <div class="video-boxes">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/lRxhw2cjzuc" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
-        </div>
-
-        <!--------ROW 5------------>
-        <div class="row video-row">
-            <div class="col-xs-4">
-                <!-- Video link 4 -->
-                <div class="video-boxes">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/1TH0t6Z29HA" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
-            <div class="col-xs-4">
-                <!-- Video link 5 -->
-                <div class="video-boxes">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ZUUK8EM76ME" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
-            <div class="col-xs-4">
-                <!-- Video link 66 -->
-                <div class="video-boxes">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/SeXBVc-bHGs" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!--------ROW 4------------>
-    <div class="row video-row">
-        <div class="col-xs-4">
-            <!-- Video link 7 -->
-            <div class="video-boxes">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/RNuWG6oNfWM" frameborder="0" allowfullscreen></iframe>
-            </div>
-        </div>
-        <div class="col-xs-4">
-            <!-- Video link 8 -->
-            <div class="video-boxes">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/5yjapMdDdyY" frameborder="0" allowfullscreen></iframe>
-            </div>
-        </div>
-        <div class="col-xs-4">
-            <!-- Video link 9 -->
-            <div class="video-boxes">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zgoyaMvwDMo" frameborder="0" allowfullscreen></iframe>
-            </div>
-        </div>
-    </div>
-
-</div>
-
+    <!---------------------------- END PAGE CONTENT -------------------------------->
 </body>
 </html>
