--- a/pages/Main.html
+++ b/pages/Main.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
     <link rel="stylesheet" href="../css/navbar-styles.css">
 
-    <script async defer src="http://platform.instagram.com/en_US/embeds.js"></script>
+    <!--<script async defer src="http://platform.instagram.com/en_US/embeds.js"></script>-->
 
 
 </head>
