--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -69,7 +69,9 @@
         </center>
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
-                <iframe class="calendar" src="https://www.google.com/calendar/embed?src=acm.calstatela%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+                <iframe class="calendar" src="https://calendar.google.com/calendar/embed?src=filmproductionsla%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                <!--<iframe class="calendar" src="https://calendar.google.com/calendar/embed?src=adr.arizaga%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>-->
+                <!--<iframe class="calendar" src="https://calendar.google.com/calendar/embed?src=acm.calstatela%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>-->
             </div>
         </div>
     </div>
