hard coded Main Page update

--- a/pages/Main.html
+++ b/pages/Main.html
@@ -20,6 +20,8 @@
 
 <body>
 
+<img class="filmstrip" src="../Images/long-filmstrip.gif">
+
 <div id="wrapper">
 
     <div id="page-content-wrapper" >
@@ -93,10 +95,25 @@
 
 
             <!-------------------------START PAGE CONTENT----------------------------->
+
+            <!-- Establish Film Strip-->
+            <div>
+                <!--<img class="filmstrip" src="../Images/filmstrip.png">-->
+            </div>
+
+            <!-- Add the floating gif -->
+            <div>
+                <!--<img class="gif first-gif" src="../Images/action.gif" >-->
+                <!--<img class="gif second-gif" src="../Images/logomovies.gif">-->
+                <!--<img class="gif third-gif" src="../Images/meeting.gif">-->
+                <!--<img class="gif" src="../Images/combinedgifs.gif">-->
+            </div>
+
             <div class="container">
+
+
                 <!-- Begin our first row of data -->
                 <div class="row">
-
                     <div class="col-xs-8 col-xs-offset-4">
                         <div class="page-header">
                             <h3>
@@ -116,7 +133,8 @@
                         </div>
                     </div>
                 </div>
-            <!-- Begin Second Row-->
+
+                <!-- Begin Second Row-->
                 <div>
                     <div class="col-xs-7 col-xs-offset-5">
                         <div class="page-header">
