Continued work on Main page: Updated gif with more dynamic values. Continued work on Previous projects page.

--- a/pages/Main.html
+++ b/pages/Main.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<img class="filmstrip" src="../Images/long-filmstrip.gif">
+<!--<img class="filmstrip" src="../Images/long-filmstrip.gif">-->
 
 <div id="wrapper">
 
@@ -47,7 +47,7 @@
                                 <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured" target="_blank">YouTube</a></li>
                                 <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                                 <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
-                                <li><a href="contact.html" target="_blank">Email</a></li>
+                                <li><a href="contact.html">Email</a></li>
                             </ul>
 
                         <li  class="dropdown">
@@ -96,22 +96,15 @@
 
             <!-------------------------START PAGE CONTENT----------------------------->
 
-            <!-- Establish Film Strip-->
-            <div>
-                <!--<img class="filmstrip" src="../Images/filmstrip.png">-->
-            </div>
-
             <!-- Add the floating gif -->
-            <div>
-                <!--<img class="gif first-gif" src="../Images/action.gif" >-->
+            <div class="gif-container">
+                <img class="gif" src="../Images/combo(framed).gif" >
                 <!--<img class="gif second-gif" src="../Images/logomovies.gif">-->
                 <!--<img class="gif third-gif" src="../Images/meeting.gif">-->
                 <!--<img class="gif" src="../Images/combinedgifs.gif">-->
             </div>
 
             <div class="container">
-
-
                 <!-- Begin our first row of data -->
                 <div class="row">
                     <div class="col-xs-8 col-xs-offset-4">
@@ -124,7 +117,7 @@
                             <p>We are the only Film club on campus that actually does anything! You are free to join
                                 Golden Eagle Film or whatever they're called if you wish, but you will find nothing but
                                 sore
-                                disappointment! We hope that you keep us in careful consideration as continue to type
+                                disappointment! We hope that you keep us in careful consideration as I continue to type
                                 nonsense into this paragraph to fill up the space!
                             </p>
                             <a class="btn btn-primary center-block" href="previous-projects.html">
