--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -36,7 +36,7 @@
                             <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured" target="_blank">YouTube</a></li>
                             <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                             <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
-                            <li><a href="contact.html" target="_blank">Email</a></li>
+                            <li><a href="contact.html">Email</a></li>
                         </ul>
 
                     <li  class="dropdown">
