--- a/pages/officers.html
+++ b/pages/officers.html
@@ -43,7 +43,7 @@
                                        target="_blank">YouTube</a></li>
                                 <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                                 <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
-                                <li><a href="contact.html" target="_blank">Email</a></li>
+                                <li><a href="contact.html">Email</a></li>
                             </ul>
 
                         <li class="active-tab dropdown">
@@ -97,10 +97,6 @@
             console.log(idNum, "idnum");
 
             function setPageInfo() {
-//                document.getElementById("president").className = "disabled";
-//                document.getElementById("vice-president").className = "disabled";
-//                document.getElementById("treasurer").className = "disabled";
-//                document.getElementById("public-relations").className = "disabled";
 
                 if (idNum == 1) {
                     document.getElementById("president").className = "";
