--- a/pages/previous-projects.html
+++ b/pages/previous-projects.html
@@ -33,7 +33,7 @@
                             <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured" target="_blank">YouTube</a></li>
                             <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                             <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
-                            <li><a href="contact.html" target="_blank">Email</a></li>
+                            <li><a href="contact.html">Email</a></li>
                         </ul>
 
                     <li  class="dropdown">
@@ -55,12 +55,61 @@
     </nav>
     <!----------------------------------END NAVBAR-------------------------------------->
 
-
     <!---------------------------- START PAGE CONTENT -------------------------------->
 
-    
-    <iframe class = "fame" width="700" height="450" src="" frameborder="0" gesture="media" allowfullscreen></iframe>
-    <h3 class="description"> <b>Here is our most recent videos</b></h3>
+    <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+    <div id="player"></div>
+
+    <script>
+        // 2. This code loads the IFrame Player API code asynchronously.
+        var tag = document.createElement('script');
+
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+        // 3. This function creates an <iframe> (and YouTube player)
+        //    after the API code downloads.
+        var player;
+        function onYouTubeIframeAPIReady() {
+            player = new YT.Player('player', {
+                height: '390',
+                width: '640',
+                videoId: 'M7lc1UVf-VE',
+                events: {
+                    'onReady': onPlayerReady,
+                    'onStateChange': onPlayerStateChange
+                }
+            });
+        }
+
+        // 4. The API will call this function when the video player is ready.
+        function onPlayerReady(event) {
+            event.target.playVideo();
+        }
+
+        // 5. The API calls this function when the player's state changes.
+        //    The function indicates that when playing a video (state=1),
+        //    the player should play for six seconds and then stop.
+        var done = false;
+        function onPlayerStateChange(event) {
+            if (event.data == YT.PlayerState.PLAYING && !done) {
+                setTimeout(stopVideo, 6000);
+                done = true;
+            }
+        }
+        function stopVideo() {
+            player.stopVideo();
+        }
+    </script>
+
+    <!--<div class="container">-->
+        <!--<div class="row" style="margin-top: 15%">-->
+            <!--<iframe class="center-block video-frame" width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PLC76BE906C9D83A3A" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>-->
+        <!--</div>-->
+        <!--<h3 class="description"> <b>Here is our most recent videos</b></h3>-->
+    <!--</div>-->
+
 
     <!---------------------------- END PAGE CONTENT -------------------------------->
 </body>
