Added partially functional instafeed Demo to contact page.

--- a/pages/previous-projects.html
+++ b/pages/previous-projects.html
@@ -29,6 +29,7 @@
                             Contact<span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
+                            <li><a href="contact.html">All Media</a></li>
                             <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
                             <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>
                             </li>
@@ -44,6 +45,7 @@
                            aria-haspopup="true"
                            aria-expanded="false">Officers<span class="caret"></span></a>
                         <ul class="dropdown-menu">
+                            <li><a href="officers.html">All Officers</a></li>
                             <li><a href="officers.html?id=1">President</a></li>
                             <li><a href="officers.html?id=2">Vice President</a></li>
                             <li><a href="officers.html?id=3">Treasurer</a></li>
