--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
     <link rel="stylesheet" href="../css/navbar-styles.css">
     <link rel="stylesheet" href="../css/contact-styles.css">
+    <script type="text/javascript" src="../Javascript/instafeed.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
 </head>
 <body>
 
@@ -94,6 +98,57 @@
         </a>
     </h3>
 </div>
+
+<!---------------------- START Instagram Feed ----------------------------->
+<script type="text/javascript">
+    var feed = new Instafeed({
+        get: 'user',
+        userId: '1055527561',
+        sortBy: 'most-recent',
+        limit: '10',
+        accessToken: '1055527561.1677ed0.554b0c70d38647059ef0fbe6fbe95385',
+        resolution: "standard_resolution",
+        template: '<div class="item"><a href="{{link}}"><img src="{{image}}"/></a><div class="carousel-caption">{{caption}}</div></div>',
+        after: function () {
+            $('#instafeed > div:nth-child(1)').addClass('active');
+        }
+    });
+    feed.run();
+</script>
+<hr>
+<div class="container">
+    <h2 style="Margin-left: 300px">ACM Instagram Feed</h2>
+    <img class="img-responsive center-block hidden-xs" src="../Images/insta.png" alt="Instagram Icon" height="64" width="64">
+</div>
+<div class="instagram hidden-xs">
+
+    <div id="myCarousel" class="carousel slide"  data-ride="carousel">
+        <div class="carousel-inner" role="listbox" interval="350" id="instafeed">
+        </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+<!---------------------- END Instagram Feed ----------------------------->
+
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-79743314-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
 
 </body>
 </html>
